[OSM-Integration] Adding the swagger yaml file changes and generated artifacts
