# src/main/java/io/swagger/model/Client.java
@@ -2,7 +2,7 @@
  * Outcarcerate
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 1.0.0
+ * OpenAPI spec version: 1.0.1
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -24,16 +24,13 @@ import javax.validation.constraints.*;
 /**
  * Client
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-08-12T21:38:30.799+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-09-24T20:34:04.774Z")
 public class Client   {
   @JsonProperty("_id")
   private String _id = null;
 
   @JsonProperty("_rev")
   private String _rev = null;
-
-  @JsonProperty("attorney_id")
-  private String attorneyId = null;
 
   @JsonProperty("first_name")
   private String firstName = null;
@@ -51,7 +48,19 @@ public class Client   {
     
     HISPANIC("Hispanic"),
     
-    OTHER("Other");
+    OTHER("Other"),
+    
+    ASIAN("Asian"),
+    
+    AMERICAN_INDIAN("American Indian"),
+    
+    BIRACIAL("Biracial"),
+    
+    WHITE_HISPANIC_OR_LATINO_("White [Hispanic or Latino]"),
+    
+    WHITE_BLACK_HISPANIC_OR_LATINO_("White/Black [Hispanic or Latino]"),
+    
+    UNKNOWN("Unknown");
 
     private String value;
 
@@ -87,7 +96,9 @@ public class Client   {
     
     MALE("Male"),
     
-    OTHER("Other");
+    OTHER("Other"),
+    
+    UNKNOWN("Unknown");
 
     private String value;
 
@@ -114,9 +125,6 @@ public class Client   {
 
   @JsonProperty("gender")
   private GenderEnum gender = null;
-
-  @JsonProperty("date_of_birth")
-  private String dateOfBirth = null;
 
   @JsonProperty("prior_felony_convictions")
   private Long priorFelonyConvictions = null;
@@ -285,9 +293,6 @@ public class Client   {
   @JsonProperty("number_of_children_under_18_at_home")
   private String numberOfChildrenUnder18AtHome = null;
 
-  @JsonProperty("health_factors")
-  private String healthFactors = null;
-
   public Client id(String id) {
     this._id = id;
     return this;
@@ -324,26 +329,6 @@ public class Client   {
 
   public void setRev(String rev) {
     this._rev = rev;
-  }
-
-  public Client attorneyId(String attorneyId) {
-    this.attorneyId = attorneyId;
-    return this;
-  }
-
-  /**
-   * Get attorneyId
-   * @return attorneyId
-   **/
-  @JsonProperty("attorney_id")
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public String getAttorneyId() {
-    return attorneyId;
-  }
-
-  public void setAttorneyId(String attorneyId) {
-    this.attorneyId = attorneyId;
   }
 
   public Client firstName(String firstName) {
@@ -422,25 +407,6 @@ public class Client   {
 
   public void setGender(GenderEnum gender) {
     this.gender = gender;
-  }
-
-  public Client dateOfBirth(String dateOfBirth) {
-    this.dateOfBirth = dateOfBirth;
-    return this;
-  }
-
-  /**
-   * Get dateOfBirth
-   * @return dateOfBirth
-   **/
-  @JsonProperty("date_of_birth")
-  @ApiModelProperty(value = "")
-  public String getDateOfBirth() {
-    return dateOfBirth;
-  }
-
-  public void setDateOfBirth(String dateOfBirth) {
-    this.dateOfBirth = dateOfBirth;
   }
 
   public Client priorFelonyConvictions(Long priorFelonyConvictions) {
@@ -614,25 +580,6 @@ public class Client   {
     this.numberOfChildrenUnder18AtHome = numberOfChildrenUnder18AtHome;
   }
 
-  public Client healthFactors(String healthFactors) {
-    this.healthFactors = healthFactors;
-    return this;
-  }
-
-  /**
-   * Get healthFactors
-   * @return healthFactors
-   **/
-  @JsonProperty("health_factors")
-  @ApiModelProperty(value = "")
-  public String getHealthFactors() {
-    return healthFactors;
-  }
-
-  public void setHealthFactors(String healthFactors) {
-    this.healthFactors = healthFactors;
-  }
-
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -645,12 +592,10 @@ public class Client   {
     Client client = (Client) o;
     return Objects.equals(this._id, client._id) &&
         Objects.equals(this._rev, client._rev) &&
-        Objects.equals(this.attorneyId, client.attorneyId) &&
         Objects.equals(this.firstName, client.firstName) &&
         Objects.equals(this.lastName, client.lastName) &&
         Objects.equals(this.race, client.race) &&
         Objects.equals(this.gender, client.gender) &&
-        Objects.equals(this.dateOfBirth, client.dateOfBirth) &&
         Objects.equals(this.priorFelonyConvictions, client.priorFelonyConvictions) &&
         Objects.equals(this.priorMisdemeanorConvictions, client.priorMisdemeanorConvictions) &&
         Objects.equals(this.criminalHistoryCategory, client.criminalHistoryCategory) &&
@@ -659,13 +604,12 @@ public class Client   {
         Objects.equals(this.annualIncomeDollars, client.annualIncomeDollars) &&
         Objects.equals(this.educationLevelCompleted, client.educationLevelCompleted) &&
         Objects.equals(this.immigrationStatus, client.immigrationStatus) &&
-        Objects.equals(this.numberOfChildrenUnder18AtHome, client.numberOfChildrenUnder18AtHome) &&
-        Objects.equals(this.healthFactors, client.healthFactors);
+        Objects.equals(this.numberOfChildrenUnder18AtHome, client.numberOfChildrenUnder18AtHome);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(_id, _rev, attorneyId, firstName, lastName, race, gender, dateOfBirth, priorFelonyConvictions, priorMisdemeanorConvictions, criminalHistoryCategory, typeOfLegalRepresentation, married, annualIncomeDollars, educationLevelCompleted, immigrationStatus, numberOfChildrenUnder18AtHome, healthFactors);
+    return Objects.hash(_id, _rev, firstName, lastName, race, gender, priorFelonyConvictions, priorMisdemeanorConvictions, criminalHistoryCategory, typeOfLegalRepresentation, married, annualIncomeDollars, educationLevelCompleted, immigrationStatus, numberOfChildrenUnder18AtHome);
   }
 
 
@@ -676,12 +620,10 @@ public class Client   {
     
     sb.append("    _id: ").append(toIndentedString(_id)).append("\n");
     sb.append("    _rev: ").append(toIndentedString(_rev)).append("\n");
-    sb.append("    attorneyId: ").append(toIndentedString(attorneyId)).append("\n");
     sb.append("    firstName: ").append(toIndentedString(firstName)).append("\n");
     sb.append("    lastName: ").append(toIndentedString(lastName)).append("\n");
     sb.append("    race: ").append(toIndentedString(race)).append("\n");
     sb.append("    gender: ").append(toIndentedString(gender)).append("\n");
-    sb.append("    dateOfBirth: ").append(toIndentedString(dateOfBirth)).append("\n");
     sb.append("    priorFelonyConvictions: ").append(toIndentedString(priorFelonyConvictions)).append("\n");
     sb.append("    priorMisdemeanorConvictions: ").append(toIndentedString(priorMisdemeanorConvictions)).append("\n");
     sb.append("    criminalHistoryCategory: ").append(toIndentedString(criminalHistoryCategory)).append("\n");
@@ -691,7 +633,6 @@ public class Client   {
     sb.append("    educationLevelCompleted: ").append(toIndentedString(educationLevelCompleted)).append("\n");
     sb.append("    immigrationStatus: ").append(toIndentedString(immigrationStatus)).append("\n");
     sb.append("    numberOfChildrenUnder18AtHome: ").append(toIndentedString(numberOfChildrenUnder18AtHome)).append("\n");
-    sb.append("    healthFactors: ").append(toIndentedString(healthFactors)).append("\n");
     sb.append("}");
     return sb.toString();
   }
