# src/main/java/io/swagger/model/ModelCase.java
@@ -2,7 +2,7 @@
  * Outcarcerate
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 1.0.0
+ * OpenAPI spec version: 1.0.1
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -27,7 +27,7 @@ import javax.validation.constraints.*;
 /**
  * ModelCase
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-08-12T21:38:30.799+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-09-24T20:34:04.774Z")
 public class ModelCase   {
   @JsonProperty("_id")
   private String _id = null;
@@ -43,6 +43,9 @@ public class ModelCase   {
 
   @JsonProperty("reasoning_for_charges")
   private String reasoningForCharges = null;
+
+  @JsonProperty("attorney_id")
+  private String attorneyId = null;
 
   @JsonProperty("possible_charges")
   private List<Charge> possibleCharges = new ArrayList<Charge>();
@@ -101,11 +104,26 @@ public class ModelCase   {
   @JsonProperty("circuit")
   private CircuitEnum circuit = null;
 
+  @JsonProperty("incidentCity")
+  private String incidentCity = null;
+
   @JsonProperty("state")
   private String state = null;
 
   @JsonProperty("district")
   private String district = null;
+
+  @JsonProperty("lengthOfCaseInDays")
+  private Long lengthOfCaseInDays = null;
+
+  @JsonProperty("ageAtIncident")
+  private Long ageAtIncident = null;
+
+  @JsonProperty("lawEnforcementAgency")
+  private String lawEnforcementAgency = null;
+
+  @JsonProperty("lawEnforcementUnit")
+  private String lawEnforcementUnit = null;
 
   public ModelCase id(String id) {
     this._id = id;
@@ -204,6 +222,25 @@ public class ModelCase   {
     this.reasoningForCharges = reasoningForCharges;
   }
 
+  public ModelCase attorneyId(String attorneyId) {
+    this.attorneyId = attorneyId;
+    return this;
+  }
+
+  /**
+   * Get attorneyId
+   * @return attorneyId
+   **/
+  @JsonProperty("attorney_id")
+  @ApiModelProperty(value = "")
+  public String getAttorneyId() {
+    return attorneyId;
+  }
+
+  public void setAttorneyId(String attorneyId) {
+    this.attorneyId = attorneyId;
+  }
+
   public ModelCase possibleCharges(List<Charge> possibleCharges) {
     this.possibleCharges = possibleCharges;
     return this;
@@ -248,6 +285,26 @@ public class ModelCase   {
     this.circuit = circuit;
   }
 
+  public ModelCase incidentCity(String incidentCity) {
+    this.incidentCity = incidentCity;
+    return this;
+  }
+
+  /**
+   * Get incidentCity
+   * @return incidentCity
+   **/
+  @JsonProperty("incidentCity")
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+  public String getIncidentCity() {
+    return incidentCity;
+  }
+
+  public void setIncidentCity(String incidentCity) {
+    this.incidentCity = incidentCity;
+  }
+
   public ModelCase state(String state) {
     this.state = state;
     return this;
@@ -286,6 +343,86 @@ public class ModelCase   {
     this.district = district;
   }
 
+  public ModelCase lengthOfCaseInDays(Long lengthOfCaseInDays) {
+    this.lengthOfCaseInDays = lengthOfCaseInDays;
+    return this;
+  }
+
+  /**
+   * Get lengthOfCaseInDays
+   * @return lengthOfCaseInDays
+   **/
+  @JsonProperty("lengthOfCaseInDays")
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+  public Long getLengthOfCaseInDays() {
+    return lengthOfCaseInDays;
+  }
+
+  public void setLengthOfCaseInDays(Long lengthOfCaseInDays) {
+    this.lengthOfCaseInDays = lengthOfCaseInDays;
+  }
+
+  public ModelCase ageAtIncident(Long ageAtIncident) {
+    this.ageAtIncident = ageAtIncident;
+    return this;
+  }
+
+  /**
+   * Get ageAtIncident
+   * @return ageAtIncident
+   **/
+  @JsonProperty("ageAtIncident")
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+  public Long getAgeAtIncident() {
+    return ageAtIncident;
+  }
+
+  public void setAgeAtIncident(Long ageAtIncident) {
+    this.ageAtIncident = ageAtIncident;
+  }
+
+  public ModelCase lawEnforcementAgency(String lawEnforcementAgency) {
+    this.lawEnforcementAgency = lawEnforcementAgency;
+    return this;
+  }
+
+  /**
+   * Get lawEnforcementAgency
+   * @return lawEnforcementAgency
+   **/
+  @JsonProperty("lawEnforcementAgency")
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+  public String getLawEnforcementAgency() {
+    return lawEnforcementAgency;
+  }
+
+  public void setLawEnforcementAgency(String lawEnforcementAgency) {
+    this.lawEnforcementAgency = lawEnforcementAgency;
+  }
+
+  public ModelCase lawEnforcementUnit(String lawEnforcementUnit) {
+    this.lawEnforcementUnit = lawEnforcementUnit;
+    return this;
+  }
+
+  /**
+   * Get lawEnforcementUnit
+   * @return lawEnforcementUnit
+   **/
+  @JsonProperty("lawEnforcementUnit")
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+  public String getLawEnforcementUnit() {
+    return lawEnforcementUnit;
+  }
+
+  public void setLawEnforcementUnit(String lawEnforcementUnit) {
+    this.lawEnforcementUnit = lawEnforcementUnit;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -301,15 +438,21 @@ public class ModelCase   {
         Objects.equals(this.clientId, _case.clientId) &&
         Objects.equals(this.crimeDescription, _case.crimeDescription) &&
         Objects.equals(this.reasoningForCharges, _case.reasoningForCharges) &&
+        Objects.equals(this.attorneyId, _case.attorneyId) &&
         Objects.equals(this.possibleCharges, _case.possibleCharges) &&
         Objects.equals(this.circuit, _case.circuit) &&
+        Objects.equals(this.incidentCity, _case.incidentCity) &&
         Objects.equals(this.state, _case.state) &&
-        Objects.equals(this.district, _case.district);
+        Objects.equals(this.district, _case.district) &&
+        Objects.equals(this.lengthOfCaseInDays, _case.lengthOfCaseInDays) &&
+        Objects.equals(this.ageAtIncident, _case.ageAtIncident) &&
+        Objects.equals(this.lawEnforcementAgency, _case.lawEnforcementAgency) &&
+        Objects.equals(this.lawEnforcementUnit, _case.lawEnforcementUnit);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(_id, _rev, clientId, crimeDescription, reasoningForCharges, possibleCharges, circuit, state, district);
+    return Objects.hash(_id, _rev, clientId, crimeDescription, reasoningForCharges, attorneyId, possibleCharges, circuit, incidentCity, state, district, lengthOfCaseInDays, ageAtIncident, lawEnforcementAgency, lawEnforcementUnit);
   }
 
 
@@ -323,10 +466,16 @@ public class ModelCase   {
     sb.append("    clientId: ").append(toIndentedString(clientId)).append("\n");
     sb.append("    crimeDescription: ").append(toIndentedString(crimeDescription)).append("\n");
     sb.append("    reasoningForCharges: ").append(toIndentedString(reasoningForCharges)).append("\n");
+    sb.append("    attorneyId: ").append(toIndentedString(attorneyId)).append("\n");
     sb.append("    possibleCharges: ").append(toIndentedString(possibleCharges)).append("\n");
     sb.append("    circuit: ").append(toIndentedString(circuit)).append("\n");
+    sb.append("    incidentCity: ").append(toIndentedString(incidentCity)).append("\n");
     sb.append("    state: ").append(toIndentedString(state)).append("\n");
     sb.append("    district: ").append(toIndentedString(district)).append("\n");
+    sb.append("    lengthOfCaseInDays: ").append(toIndentedString(lengthOfCaseInDays)).append("\n");
+    sb.append("    ageAtIncident: ").append(toIndentedString(ageAtIncident)).append("\n");
+    sb.append("    lawEnforcementAgency: ").append(toIndentedString(lawEnforcementAgency)).append("\n");
+    sb.append("    lawEnforcementUnit: ").append(toIndentedString(lawEnforcementUnit)).append("\n");
     sb.append("}");
     return sb.toString();
   }
